--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -42,7 +42,7 @@ other="Podobne rože"
 [flowerrandom]
 other="Nekaj naključno izbranih rož"
 
-[MorePhotos]
+[flowersPhotos]
 other="Več fotografij"
 
 [recentupdates]
