Fixing top pages and layout links

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -48,5 +48,8 @@ other="Photo Gallery"
 [hikesPhotos]
 other="Photo Gallery"
 
+[latestarticles]
+other="Latest Articles"
+
 [recentupdates]
 other="Recent updates"
