--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -45,5 +45,8 @@ other="Nekaj naključno izbranih rož"
 [flowersPhotos]
 other="Več fotografij"
 
+[latestarticles]
+other="Zadnje objave"
+
 [recentupdates]
 other="Zadnje spremembe"
