Fixing English multipath hike layouts

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -48,6 +48,10 @@ other="Photo Gallery"
 [hikesPhotos]
 other="Photo Gallery"
 
+[hour]
+one="hour"
+other="hours"
+
 [latestarticles]
 other="Latest Articles"
 
