Added "recent move" header

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -55,6 +55,9 @@ other="hours"
 [latestarticles]
 other="Latest Articles"
 
+[migrated]
+other="We recently migrated our content from zaplana.net to SloveniaHiking.Rocks."
+
 [more]
 other="Read more"
 
