--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -54,6 +54,9 @@ other="ur"
 [latestarticles]
 other="Zadnje objave"
 
+[migrated]
+other="Pred kratkim smo naše vsebine z zaplana.net preselili na novo spletno stran."
+
 [more]
 other="Več o tem"
 
