Adding "structured" hike with support for MAPZS, Relive and Google Maps

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -48,6 +48,9 @@ other="Photo Gallery"
 [hikesPhotos]
 other="Photo Gallery"
 
+[hikesFacts]
+other="At a glance"
+
 [hour]
 one="hour"
 other="hours"
