Add "ice climbing" blog post
Also:
* Add several shortcodes needed in tips
* Create a post template
* Add "picture import" tool

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -64,5 +64,8 @@ other="We recently migrated our content from zaplana.net to SloveniaHiking.Rocks
 [more]
 other="Read more"
 
+[postsPhotos]
+other="Photo Gallery"
+
 [recentupdates]
 other="Recent updates"
