--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -60,5 +60,8 @@ other="Pred kratkim smo naše vsebine z zaplana.net preselili na novo spletno st
 [more]
 other="Več o tem"
 
+[postsPhotos]
+other="Fotografije"
+
 [recentupdates]
 other="Zadnje spremembe"
