Adding photo authors to flowers

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -112,6 +112,9 @@ other="We recently migrated our content from zaplana.net to SloveniaHiking.Rocks
 [more]
 other="Read more"
 
+[photoAuthor]
+other="Photos by"
+
 [postsPhotos]
 other="Photo Gallery"
 
