--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -114,6 +114,9 @@ other="Pred kratkim smo naše vsebine z zaplana.net preselili na novo spletno st
 [more]
 other="Več o tem"
 
+[photoAuthor]
+other="Avtor fotografij"
+
 [postsPhotos]
 other="Fotografije"
 
