Fix "new-hike" script, add EN/SI default values to hikes template
Also: display "Path description" button linking to third-party web pages

--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -93,6 +93,9 @@ other="Seznam izletov"
 [hikeMap]
 other="Zemljevid poti"
 
+[hikePathDescription]
+other="Opis poti"
+
 [hikePeak]
 other="Višina vrha"
 
