Bug fix: display multipath hikes without description as a list not blurbs

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -87,6 +87,9 @@ other="List of hikes"
 [hikeMap]
 other="Hiking map"
 
+[hikeNoDescription]
+other="Hikes without description"
+
 [hikePeak]
 other="Peak altitude"
 
