Add "Download GPX File" button

--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -78,6 +78,9 @@ other="Višinska razlika"
 [hikeDuration]
 other="Dolžina"
 
+[hikeGPX]
+other="Prenesi GPX sled"
+
 [hikeInteractive]
 other="Raziščite pot"
 
