--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -72,6 +72,9 @@ other="Average time"
 [hikeFacts]
 other="At a glance"
 
+[hikeGPX]
+other="Download GPX file"
+
 [hikeInteractive]
 other="Interactive route"
 
