Add GPX map to biking tours

--- a/i18n/sl.toml
+++ b/i18n/sl.toml
@@ -120,6 +120,9 @@ other="Začetek poti"
 [latestarticles]
 other="Zadnje objave"
 
+[mapRoute]
+other="Zemljevid poti"
+
 [migrated]
 other="Pred kratkim smo naše vsebine z zaplana.net preselili na novo spletno stran."
 
