--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,3 +1,6 @@
+[bikingPhotos]
+other="Photo Gallery"
+
 [genuslist]
 other="""
 Our web site contains these flowers from the <em>{{ .Title }}</em> genus:
@@ -114,6 +117,9 @@ other="hours"
 
 [latestarticles]
 other="Latest Articles"
+
+[mapRoute]
+other="Map of the Route"
 
 [migrated]
 other="We recently migrated our content from zaplana.net to SloveniaHiking.Rocks."
