Splitting regions into Featured, Ranges and Regions

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -150,3 +150,10 @@ other="Recent updates"
 
 [regions]
 other="Regions"
+
+[regionsRanges]
+other="Mountain Ranges and Hills"
+
+[regionsFeatured]
+other="Featured"
+
