Add "nearby hikes" to hiking sidebar

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -96,6 +96,9 @@ other="List of hikes"
 [hikeMap]
 other="Hiking map"
 
+[hikeNearby]
+other="Nearby trips"
+
 [hikeNoDescription]
 other="Hikes without description"
 
