Added "upcoming" section to regions

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -142,6 +142,9 @@ other="We recently migrated our content from zaplana.net to SloveniaHiking.Rocks
 [more]
 other="Read more"
 
+[moreToCome]
+other="Coming Soon"
+
 [photoAuthor]
 other="Photos by"
 
