Biking: Klek Alp

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -73,7 +73,7 @@ other="Elevation gain"
 other="Average time"
 
 [hikeFacts]
-other="At a glance"
+other="At a Glance"
 
 [hikeGPX]
 other="Download GPX file"
