i18n of the hike list headers

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -48,6 +48,9 @@ other="A few randomly selected flowers"
 [flowersPhotos]
 other="Photo Gallery"
 
+[hike]
+other="Hike"
+
 [hikeAlt]
 other="Alternate starting point"
 
